--- a/app/app.css
+++ b/app/app.css
@@ -17,13 +17,63 @@
   --color-background: #080808;
 }
 
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
-
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+@layer base {
+  *,
+  ::after,
+  ::before {
+    @apply m-0 p-0 box-border;
   }
+
+  html, body {
+    @apply bg-white dark:bg-gray-950 font-display;
+
+    @media (prefers-color-scheme: dark) {
+      color-scheme: dark;
+    }
+  }
+
+  h1 {
+    @apply
+      text-[32px] leading-[1.1] tracking-[-1px]
+      lg:text-[38px] lg:leading-[1.1] lg:tracking-[-1.1px]
+  }
+  h2 {
+    @apply
+      text-[24px] leading-[1.2] tracking-[-0.7px]
+      lg:text-[32px] lg:leading-[1.1] lg:tracking-[-1px]
+  }
+  h3 {
+    @apply
+      text-[20px] leading-[1.2] tracking-[-0.5px]
+      lg:text-[24px] lg:leading-[1.2] lg:tracking-[-0.7px]
+  }
+  h4 {
+    @apply
+      text-[18px] leading-[1.3] tracking-[-0.4px]
+      lg:text-[20px] lg:leading-[1.2] lg:tracking-[-0.5px]
+  }
+  h5 {
+    @apply text-[18px] leading-[1.3] tracking-[-0.4px]
+  }
+
+
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    @apply cursor-pointer;
+  }
+
+}
+
+@utility text-body-l {
+  @apply text-[16px] leading-[1.5] tracking-[-0.3px]
+}
+
+@utility text-body-m {
+  @apply text-[14px] leading-[1.4] tracking-[-0.3px]
+}
+
+@utility text-body-s {
+  @apply text-[12px] leading-[1.6] tracking-[-0.1px]
 }
 
 a, span, p, li {
