--- a/app/app.css
+++ b/app/app.css
@@ -228,3 +228,21 @@
 .presale-link-bg {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.12) 0%, rgba(153, 153, 153, 0.12) 100%);
 }
+
+.inner-shadow-presale {
+  box-shadow: 1px 1px 100px 3px rgba(0,0,0,0.95) inset;
+}
+
+.token-description h3 {
+  font-weight: bold;
+  font-size: 24px;
+  display: block;
+  margin-bottom: 24px;
+}
+
+.token-description p {
+  opacity: 60%;
+  font-weight: 500;
+  display: block;
+  margin-bottom: 12px;
+}
