--- a/app/app.css
+++ b/app/app.css
@@ -40,7 +40,9 @@
   }
 
   html, body {
-    @apply bg-white dark:bg-background font-display;
+    @apply 
+      bg-white dark:bg-background font-display
+      text-body-s md:text-body-m lg:text-body-l;
 
     @media (prefers-color-scheme: dark) {
       color-scheme: dark;
@@ -48,27 +50,19 @@
   }
 
   h1 {
-    @apply
-      text-[32px] leading-[1.1] tracking-[-1px]
-      lg:text-[38px] lg:leading-[1.1] lg:tracking-[-1.1px]
+    @apply text-h1;
   }
   h2 {
-    @apply
-      text-[24px] leading-[1.2] tracking-[-0.7px]
-      lg:text-[32px] lg:leading-[1.1] lg:tracking-[-1px]
+    @apply text-h2;
   }
   h3 {
-    @apply
-      text-[20px] leading-[1.2] tracking-[-0.5px]
-      lg:text-[24px] lg:leading-[1.2] lg:tracking-[-0.7px]
+    @apply text-h3;
   }
   h4 {
-    @apply
-      text-[18px] leading-[1.3] tracking-[-0.4px]
-      lg:text-[20px] lg:leading-[1.2] lg:tracking-[-0.5px]
+    @apply text-h4;
   }
   h5 {
-    @apply text-[18px] leading-[1.3] tracking-[-0.4px]
+    @apply text-h5;
   }
 
 
@@ -77,6 +71,30 @@
     @apply cursor-pointer;
   }
 
+}
+
+@utility text-h1 {
+  @apply
+    text-[32px] leading-[1.1] tracking-[-1px]
+    lg:text-[38px] lg:leading-[1.1] lg:tracking-[-1.1px];
+}
+@utility text-h2 {
+  @apply
+    text-[24px] leading-[1.2] tracking-[-0.7px]
+    lg:text-[32px] lg:leading-[1.1] lg:tracking-[-1px];
+}
+@utility text-h3 {
+  @apply
+    text-[20px] leading-[1.2] tracking-[-0.5px]
+    lg:text-[24px] lg:leading-[1.2] lg:tracking-[-0.7px];
+}
+@utility text-h4 {
+  @apply
+    text-[18px] leading-[1.3] tracking-[-0.4px]
+    lg:text-[20px] lg:leading-[1.2] lg:tracking-[-0.5px];
+}
+@utility text-h5 {
+  @apply text-[18px] leading-[1.3] tracking-[-0.4px];
 }
 
 
