add light theme fix

--- a/app/app.css
+++ b/app/app.css
@@ -32,6 +32,11 @@
   --color-background: #080808;
 }
 
+body {
+  background: #080808;
+  color: white;
+}
+
 @layer base {
   *,
   ::after,
@@ -43,10 +48,6 @@
     @apply
       bg-white dark:bg-background font-display
       text-body-l;
-
-    @media (prefers-color-scheme: dark) {
-      color-scheme: dark;
-    }
   }
 
   h1 {
