Add WelcomeModal markup and logic

--- a/app/app.css
+++ b/app/app.css
@@ -7,6 +7,7 @@
   --color-primary-700: #329064;
   --color-primary-600: #09C66E;
   --color-primary: #3AFFA3;
+  --color-primary-transparent: #3AFFA31A;
   --color-violet-transparent: #F24BE70D;
   --color-violet: #9D85FF;
   --color-bronze-transparent: #F89F3F1C;
